<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track Your Items</string>
    <string name="action_settings">Settings</string>
    <string name="borrowedItemsBtn">Borrowed Items</string>
    <string name="lentItemsBtn">Lent Items</string>
    <string name="addBorrowedBtn">Add Borrowed Item</string>
    <string name="addLentItemBtn">Add Lent Item</string>
    <string name="viewActivityBtn">View Activity</string>
    <string name="title_activity_borrowed_items">Borrowed Items</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lent_items">Lent Items</string>
    <string name="title_activity_add_lent_item">Add Lent Item</string>
    <string name="title_activity_add_borrowed_item">Add Borrowed Item</string>
    <string name="title_activity_view">Activity</string>
    <string name="item_name">Item Name</string>
    <string name="enter_item_name">Item Name</string>
    <string name="borrower">Borrower</string>
    <string name="lender">Lender</string>
    <string name="name_borrower">Name of borrower</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="due_date">Due Date</string>
    <string name="save">Save</string>
    <string name="title_activity_select_person">Select Person</string>
    <string name="title_activity_select_category">Select Category</string>
    <string name="add_new_person">Add New Person</string>
    <string name="add_new_category">Add New Category</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="add">Add</string>
    <string name="title_activity_add_category">Add Category</string>
	<string name="returned">Returned</string>
</resources>