<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/borrowedItemsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/borrowedItemsBtn" 
        android:onClick="showBorrowedItems"/>

    <Button
        android:id="@+id/lentItemsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/borrowedItemsButton"
        android:layout_below="@+id/borrowedItemsButton"
        android:text="@string/lentItemsBtn" 
        android:onClick="showLentItems"/>

    <Button
        android:id="@+id/addBorrowedItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lentItemsButton"
        android:layout_below="@+id/lentItemsButton"
        android:text="@string/addBorrowedBtn" 
        android:onClick="addBorrowedItems"/>

    <Button
        android:id="@+id/addLentItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addBorrowedItemButton"
        android:layout_below="@+id/addBorrowedItemButton"
        android:text="@string/addLentItemBtn" 
        android:onClick="addLentItems"/>

    <Button
        android:id="@+id/viewActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addLentItemButton"
        android:layout_below="@+id/addLentItemButton"
        android:text="@string/viewActivityBtn" 
        android:onClick="showActivity"/>

</RelativeLayout>