<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddBorrowedItemActivity" >

    <TextView
        android:id="@+id/transactItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/transactPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transactItemName"
        android:layout_below="@+id/itemName"
        android:layout_marginTop="17dp"
        android:text="@string/lender"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/transactPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/transactPerson"
        android:layout_alignBottom="@+id/transactPerson"
        android:layout_alignLeft="@+id/itemName"
        android:layout_marginLeft="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/transactItemName"
        android:layout_alignBottom="@+id/transactItemName"
        android:layout_alignLeft="@+id/personName"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:hint="@string/enter_item_name" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/transactPersonName"
        android:layout_toLeftOf="@+id/button1"
        android:layout_toRightOf="@+id/transactItemName"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/name"/>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/personName"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/personName"
        android:text="@string/add" 
        android:onClick="selectPerson"/>

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/personName"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10" 
        android:hint="@string/category"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/transactPerson"
        android:layout_below="@+id/transactPersonName"
        android:layout_marginTop="17dp"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/categoryName"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/categoryName"
        android:text="@string/add" 
        android:onClick="selectCategory"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/categoryName"
        android:text="@string/save" 
        android:onClick="save"/>

</RelativeLayout>